[package]
name = "VEILGUARD"
version = "3.1.0"
edition = "2024"

[dependencies]
eframe = "0.26" # or latest
egui = "0.26"
anyhow = "1.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9" # Note: using 0.9 logic (random_range)
blake3 = "1.5"
dirs = "5.0"
rfd = "0.14"
hex = "0.4"
whoami = "1.5"
aes-gcm = "0.10.3"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
chrono = "0.4"
sysinfo = "0.38.1"
machine-uid = "0.5.4"
